--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,3 +22,40 @@ h3, h4, h5 {
     height: 4rem;
     margin-bottom: 0px;
 }
+
+/* Temperature and Info Container Main Styling */
+.low {
+    border-radius: 5px;
+    background-color: rgb(79, 122, 79);
+    padding: 6px;
+    color: white;
+}
+
+.moderate {
+    border-radius: 5px;
+    background-color: rgb(230, 230, 70);
+    padding: 6px;
+    color: dimgray;
+}
+
+.high {
+    border-radius: 5px;
+    background-color: rgb(175, 127, 37);
+    padding: 6px;
+    color: dimgray;
+}
+
+.vhigh {
+    border-radius: 5px;
+    background-color: rgb(184, 46, 46);
+    padding: 6px;
+    color: white;
+}
+
+.searchCol {
+    height: 100vh;
+    background-color: darkcyan;
+    padding-top: 1rem;
+    padding-right: 2rem;
+    margin-right: -1rem;
+}
