--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -52,6 +52,7 @@ h3, h4, h5 {
     color: white;
 }
 
+/* Search Column Main Styling */
 .searchCol {
     height: 100vh;
     background-color: darkcyan;
